--- a/mobile/sentiremobile/app/src/main/res/layout/zzzactivity_sensor_management.xml
+++ b/mobile/sentiremobile/app/src/main/res/layout/zzzactivity_sensor_management.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="biz.lightwell.sentiremobile.sensorMgmt.SensorManagementActivity">
+    tools:context="biz.lightwell.sentiremobile.sensorMgmt.zzzSensorManagementActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -67,6 +67,23 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/sensorData"
+            android:text="TBD"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Temperature Value: "/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/tempData"
             android:text="TBD"
             />
     </LinearLayout>
