--- a/mobile/sentiremobile/app/src/main/res/layout/activity_sensor_mgmt.xml
+++ b/mobile/sentiremobile/app/src/main/res/layout/activity_sensor_mgmt.xml
@@ -96,5 +96,17 @@
             android:text="TBD"
             />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sensorDataList"
+            >
+        </ListView>
+    </LinearLayout>
+
 
 </LinearLayout>
