Added a send JSON ability
Right now just pulls ALL data and sends as a json array.

--- a/mobile/sentiremobile/app/src/main/res/layout/activity_sensor_mgmt.xml
+++ b/mobile/sentiremobile/app/src/main/res/layout/activity_sensor_mgmt.xml
@@ -26,6 +26,12 @@
             android:id="@+id/scanStatus"
             android:text="TBD"
             />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_sendJSON"
+            android:text="Send JSON"
+            />
     </LinearLayout>
 
     <LinearLayout
