--- a/mobile/sentiremobile/app/src/main/res/layout/activity_sensor_mgmt.xml
+++ b/mobile/sentiremobile/app/src/main/res/layout/activity_sensor_mgmt.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="6dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,8 +29,13 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btn_sendJSON"
-            android:text="Send JSON"
+            android:id="@+id/btn_sendJSONUpdate"
+            android:text="Send JSON Update" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_sendJSONAll"
+            android:text="Send JSON All"
             />
     </LinearLayout>
 
